--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-"name":"TICKSHARK",
-"short_name":"TICKSHARK",
+"name":"OSAMTRADING HUB",
+"short_name":"OSAMTRADINGHUB",
 "theme_color":"#414652",
 "description":"Trade on your finger prints.",
 "background_color":"#414652",
