--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
 "start_url":"/",
 "icons": [
  {
-"src":"E0BCB7A8-2F8A-4CE2-BADC-BE2A67E38C01.jpeg",
+"src":"osamlogo.jpg",
 "sizes":"512x512",
 "type":"image/jpeg"
  }
