--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-"name":"Deriv Lite",
-"short_name":"Deriv Lite",
+"name":"TforexPro",
+"short_name":"TforexPro",
 "theme_color":"#414652",
 "description":"Trade on your finger prints.",
 "background_color":"#414652",
@@ -14,3 +14,4 @@
  }
    ]
 }
+
