--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-"name":"TforexPro",
-"short_name":"TforexPro",
+"name":"Mesoflix",
+"short_name":"Mesoflix",
 "theme_color":"#414652",
 "description":"Trade on your finger prints.",
 "background_color":"#414652",
@@ -14,4 +14,5 @@
  }
    ]
 }
+
 
